# portable-fdsnws-dataselect

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  description.rst  pyproject.toml  setup.py
.github/workflows/: release.yml
docs/: Maintainer.md  README.md  _config.yml  index.md  maintainer.md
portable_fdsnws_dataselect/: __init__.py  handler.py  miniseed.py  msriterator.py  request.py  server.py  test.py
portable_fdsnws_dataselect/docs/: application.wadl  help.html  index.html
portable_fdsnws_dataselect/example/: server.ini
src/: README.rst  msriterator.py  server.ini  server.py  setup.py
src/portable_fdsnws_dataselect/: __init__.py  handler.py  miniseed.py  msriterator.py  request.py  server.py
src/portable_fdsnws_dataselect/docs/: application.wadl  help.html  index.html  style.css
src/portable_fdsnws_dataselect/example/: server.ini
